# MoodMelodyNepal

./: .env.example  LICENSE  README.md  build.sh  manage.py  pyproject.toml  requirements.txt
detection/: detect.py  urls.py  views.py
music/: admin.py  enum.py  function.py  models.py  urls.py  views.py
music/migrations/: 0001_initial.py  0002_youtubeplaylist_channel_title_and_more.py  0003_alter_youtubeplaylist_channel_title_and_more.py
root/: asgi.py  settings.py  urls.py  wsgi.py
root/management/commands/: create_admin.py  seed_music.py
seeds/: music.json
static/css/: style.css
static/img/: banner.avif
static/js/: emotion-detection.js  mood.js  player.js
templates/: base.html  error.html  index.html  player.html  playlist.html
templates/partials/: features.html  footer.html  head.html  hero.html  navbar.html
